Add generic-like custom property value repository